Refactor(core): Apply composition and DDD to Building components
This commit refactors the 'Building' entity and its related services, DTOs, and mappers within the 'core' module to align with the project's updated architectural principles (composition over inheritance, DDD, MapStruct mappers).

Key changes:

1.  **Building Entity (`Building.java`):**
    *   I modified `Building` to compose a `Facility` entity via a `@OneToOne` relationship, removing the previous inheritance from `Facility`.
    *   `Building` now has its own primary key (`id`).
    *   I updated the constructor to initialize the composed `Facility` instance.

2.  **Building Repository (`BuildingRepository.java`):**
    *   I reviewed and confirmed that no changes were required as it only contained standard Spring Data JPA methods, which are compatible with the refactored `Building` entity.

3.  **Building Service (`BuildingService.java`):**
    *   I refactored this to work with the new compositional structure of `Building`.
    *   I updated logic for creating, reading, updating, and deleting `Building` entities, including proper handling of the composed `Facility` (e.g., using `FacilityService` to save/update the `Facility` part).
    *   I corrected ID management to distinguish between `Building` IDs and `Facility` IDs.

4.  **Data Transfer Objects (DTOs):**
    *   `BuildingResponse.java`: I ensured it's a Java record, now includes `Building`'s own `id`, and nests `FacilityResponse`.
    *   `BuildingCreateRequest.java` and `BuildingUpdateRequest.java`: I updated these to Java records, structured to handle data for both `Building` and its composed `Facility`.

5.  **Mapper (`BuildingMapper.java`):**
    *   I introduced `BuildingMapper` using MapStruct for automated conversion between `Building` entities and `BuildingResponse` DTOs.
    *   This mapper utilizes `FacilityMapper` for the nested `FacilityResponse`.
    *   The `floors` field in `BuildingResponse` is explicitly ignored by the mappe